# Major-Ambience

./: .gitattributes  .gitignore  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  FORECAST.md  HANDOVER.md  IDEAS.md  LICENSE  MARKETING.md  Major Ambience - Pitch Deck.html  Major Ambience - Pitch Deck.pptx  OUTREACH_TEMPLATES.md  PRESS_KIT.md  README.md  RISKS_LEGAL.md  ROADMAP.md  TRAILER_STORYBOARD.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: launch.json
.github/: PR_BODY_audio_arch.md  PR_BODY_themes_dm.md
.github/workflows/: ci.yml  pages.yml
apps/desktop/: package.json  tsconfig.json  vitest.config.ts
apps/desktop/src/: App.tsx  Library.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/migrations/: 0001_initial.sql  0002_track_references.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: audio.ts  (+17 more)
apps/mobile/: app.json  metro.config.js  package.json
apps/mobile/app/: +not-found.tsx  _layout.tsx  favorites.tsx  modal.tsx  now-playing.tsx  recent.tsx  settings.tsx
apps/mobile/src/: Glyph.tsx  tokens.ts
cloud/worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
cloud/worker/src/: auth.ts  blob.ts  email.ts  http.ts  index.ts  jwt.ts  types.ts
docs/: BUILD_GUIDE.md  CATEGORIZATION_GUIDE.md  CLOUD_SYNC.md  IAP.md  TELEMETRY.md
prototype/: index.html
prototype/app/: app.jsx  data.js  desktop.jsx  icons.jsx  screens.jsx  ui.jsx  windows-frame.jsx
(+77 files in other folders)
